/cp 2013-02-20  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/56373
	* tree.c (maybe_warn_zero_as_null_pointer_constant): Add.
	* cvt.c (ocp_convert): Use the latter.
	(cp_convert_to_pointer): Likewise.
	* decl.c (check_default_argument): Likewise.
	* typeck.c (cp_build_binary_op): Likewise.
	* cp-tree.h (maybe_warn_zero_as_null_pointer_constant): Declare.

/testsuite
2013-02-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56373
	* g++.dg/cpp0x/Wzero-as-null-pointer-constant-2.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196165 138bc75d-0d04-0410-961f-82ee72b054a4